[gd_scene load_steps=7 format=3 uid="uid://bry7kmphp8e1k"]

[ext_resource type="Script" uid="uid://bmqt7fslvecln" path="res://assets/scripts/menu.gd" id="1_td620"]
[ext_resource type="PackedScene" uid="uid://cvbi7anramml3" path="res://assets/textures/Office.glb" id="2_a1mor"]
[ext_resource type="Texture2D" uid="uid://c62odai2unvuo" path="res://assets/images/title.png" id="3_hq0rc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4hy44"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_ytr4m"]
sky_material = SubResource("ProceduralSkyMaterial_4hy44")

[sub_resource type="Environment" id="Environment_l48gv"]
background_mode = 2
sky = SubResource("Sky_ytr4m")
tonemap_mode = 2
glow_enabled = true
glow_levels/3 = 4.29
glow_levels/5 = 6.39
glow_intensity = 0.1
glow_blend_mode = 1
glow_hdr_threshold = 0.85
glow_hdr_scale = 1.55
fog_enabled = true

[node name="Menu" type="Node3D"]
script = ExtResource("1_td620")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l48gv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.774168, -0.00530641, 0.632958, 0.00525194, 0.999877, 0.0148061, -0.632959, 0.0147867, -0.774045, 5.5, 7.89276, -11.5)
fov = 60.0

[node name="Office" parent="." instance=ExtResource("2_a1mor")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 6.5, 1.6387)

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="Panel" type="ColorRect" parent="MenuCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="TitleLabel" type="TextureRect" parent="MenuCanvas/Panel"]
layout_mode = 0
offset_left = 50.0
offset_right = 550.0
offset_bottom = 500.0
texture = ExtResource("3_hq0rc")

[node name="StartButton" type="Button" parent="MenuCanvas/Panel"]
layout_mode = 0
offset_left = 220.0
offset_top = 351.0
offset_right = 323.0
offset_bottom = 382.0
text = "Start Button"

[node name="Tutorial Button" type="Button" parent="MenuCanvas/Panel"]
layout_mode = 0
offset_left = 205.0
offset_top = 405.0
offset_right = 331.0
offset_bottom = 436.0
text = "Tutorial Button"

[node name="ExitButton" type="Button" parent="MenuCanvas/Panel"]
layout_mode = 0
offset_left = 227.0
offset_top = 502.0
offset_right = 321.0
offset_bottom = 533.0
text = "Exit Button"

[node name="CreditButton" type="Button" parent="MenuCanvas/Panel"]
layout_mode = 0
offset_left = 215.0
offset_top = 455.0
offset_right = 332.0
offset_bottom = 486.0
text = "Credit  Button"

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.13862, 4.72494, -3.46147)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 2.5

[node name="OmniLight3D5" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.128, 4.725, -3.286)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 2.5

[node name="OmniLight3D6" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.639, 4.725, -3.286)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 2.5

[node name="OmniLight3D7" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.538, 4.725, -2.541)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 2.5

[node name="OmniLight3D8" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.4606, 9.527, -2.53)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D9" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.8526, 9.527, -2.485)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D10" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.339, 9.527, -2.625)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D11" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.2631, 9.527, -2.45)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D12" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.267, 9.527, -2.45)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D13" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.318, 9.527, -2.46)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D14" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.616, 9.527, -2.88)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D15" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.005, 9.527, -2.75)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 4.0

[node name="OmniLight3D4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.123, 4.885, -2.961)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 2.75

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.091, 4.725, -3.096)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 2.5

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1851, 4.72494, -3.50198)
light_color = Color(1, 0.7, 0.7, 1)
light_energy = 2.5
